Adicionado tratamento de erro e concluido a autenticação do usuário.
