# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -1,0 +1,17 @@
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+
+import { AuthenticateUserUseCase } from "./AuthenticateUserCase";
+
+class AuthenticateUserController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { password, email } = request.body;
+
+    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
+    const token = await authenticateUserUseCase.execute({ email, password });
+
+    return response.json(token);
+  }
+}
+
+export { AuthenticateUserController };
